--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my website</h1>
+    <a href="https://junagadh.netlify.app/">Junagadh</a>
 </body>
 </html>
