--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="https://junagadh.netlify.app/">Junagadh</a>
+    <div>
+        <a href="https://junagadh.netlify.app/">Home Town Website</a>
+    </div>
 </body>
 </html>
