--- a/index.html
+++ b/index.html
@@ -1,14 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Resume</title>
+    <link rel="stylesheet" href="sytle.css">
 </head>
 <body>
-    <div>
-        <a href="https://junagadh.netlify.app/">Home Town Website</a>
+    <div class="main">
+        <div class="head">
+            <h1>Resume</h1>
+        </div>
+        <div class="photo">
+            <img src="Photo.jpg" alt="">
+        </div>
+        <div class="personal_details">
+            <h2>Personal Details</h2>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <td>Malam Hari</td>
+                </tr>
+                <tr>
+                    <th>Mobile</th>
+                    <td>7284080686</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>malamharid@gmail.com</td>
+                </tr>
+                <tr>
+                    <th>Age</th>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <th>Gender</th>
+                    <td>Male</td>
+                </tr>
+                <tr>
+                    <th>Birth Date</th>
+                    <td>01/09/2003</td>
+                </tr>
+                <tr>
+                    <th>Address</th>
+                    <td>Junagadh</td>
+                </tr>
+            </table>
+        </div>
+        <div class="education_details">
+            <h2>Education Details</h2>
+            <table border="1">
+                <tr>
+                    <th>Standard</th>
+                    <th>Board</th>
+                    <th>Year</th>
+                    <th>Percentage</th>
+                </tr>
+                <tr>
+                    <td>10<sup>th</sup></td>
+                    <td>GSHEB</td>
+                    <td>2019</td>
+                    <td>77.5</td>
+                </tr>
+                <tr>
+                    <td>12<sup>th</sup></td>
+                    <td>GSHEB</td>
+                    <td>2021</td>
+                    <td>82.5</td>
+                </tr>
+                <tr>
+                    <td>IT (BE)</td>
+                    <td>GTU</td>
+                    <td>2025</td>
+                    <td>9.2</td>
+                </tr>
+            </table>
+        </div>
+        <div class="skills">
+            <h3><u>Skills</u></h3>
+            <ul class="tech">
+                <li><b>Technical Skills</b></li>
+                <ul class="h">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java Script</li>
+                    <li>PHP</li>
+                    <li>MySQL</li>
+                    <li>DBMS</li>
+                    <li>Java</li>
+                </ul>
+                <ul class="h">
+                    <li>Python</li>
+                    <li>MongoDB</li>
+                    <li>MS Office</li>
+                    <li>Photoshop</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                </ul>
+            </ul>
+            <ul class="nontech">
+                <li><b>Non Technical Skill</b></li>
+                <ul>
+                    <li>Communication Skill</li>
+                    <li>Other Soft Skills</li>
+                </ul>
+            </ul>
+        </div>
+        <div class="experience">
+            <h3><u>Experience</u></h3>
+            <table border="1" style="border-collapse: collapse;">
+                <tr>
+                    <th>Company</th>
+                    <th>Profession</th>
+                    <th>Duration</th>
+                </tr>
+                <tr>
+                    <td>TCS</td>
+                    <td>Java intern</td>
+                    <td>6 month</td>
+                </tr>
+                <tr>
+                    <td>Google</td>
+                    <td>Junior Java Developer</td>
+                    <td>1 year</td>
+                </tr>
+            </table>
+        </div>
+        <div class="declaration">
+            <h3><u>Declaration</u></h3>
+            <p>I herreby declare that the details and information given above are compelete and</p>
+            <p> true to the best of my knowledge</p>
+            <img src="Sing.jpg" height="50px" width="160px" alt="">
+        </div>
     </div>
 </body>
+
 </html>
+
+
