--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="sytle.css">
+    <link rel="stylesheet" href="css/sytle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
     <div class="main">
@@ -13,10 +14,13 @@
             <h1>Resume</h1>
         </div>
         <div class="photo">
-            <img src="Photo.jpg" alt="">
+            <img src="assets/Photo.jpg" alt="">
         </div>
         <div class="personal_details">
-            <h2>Personal Details</h2>
+            <div class="top">
+                <img src="assets/icon/personal detals.png" alt="">
+                <h2>Personal Details</h2>
+            </div>
             <table>
                 <tr>
                     <th>Name</th>
@@ -49,7 +53,10 @@
             </table>
         </div>
         <div class="education_details">
-            <h2>Education Details</h2>
+            <div class="top">
+                <img src="assets/icon/educational details.png" alt="">
+                <h2>Education Details</h2>
+            </div>
             <table border="1">
                 <tr>
                     <th>Standard</th>
@@ -78,34 +85,45 @@
             </table>
         </div>
         <div class="skills">
-            <h3><u>Skills</u></h3>
-            <ul class="tech">
-                <li><b>Technical Skills</b></li>
-                <ul class="h">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Java Script</li>
-                    <li>PHP</li>
-                    <li>MySQL</li>
-                    <li>DBMS</li>
-                    <li>Java</li>
-                </ul>
-                <ul class="h">
-                    <li>Python</li>
-                    <li>MongoDB</li>
-                    <li>MS Office</li>
-                    <li>Photoshop</li>
-                    <li>Git</li>
-                    <li>Github</li>
-                </ul>
-            </ul>
-            <ul class="nontech">
-                <li><b>Non Technical Skill</b></li>
-                <ul>
-                    <li>Communication Skill</li>
-                    <li>Other Soft Skills</li>
-                </ul>
-            </ul>
+            <h2>Skills</h2>
+           <div class="skill">
+            <table>
+                <tr>
+                    <td><img src="assets/icon/html.png""></td>
+                    <td>HTML</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/css.png" alt=""></td>
+                    <td>CSS</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/js.png" alt=""></td>
+                    <td>Java Script</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/php.png" alt=""></td>
+                    <td>PHP</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td><img src="https://img.icons8.com/color/48/c-programming.png" alt=""></td>
+                    <td>C</td>
+                </tr>
+                <tr>
+                    <td><img src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="" ></td>
+                    <td>Java</td>
+                </tr>
+                <tr>
+                    <td><img src="https://img.icons8.com/color/48/python--v1.png" alt=""></td>
+                    <td>Python</td>
+                </tr>
+                <tr>
+                    <td><img src="https://img.icons8.com/color/48/mysql-logo.png" alt=""></td>
+                    <td>My SQL</td>
+                </tr>
+            </table>
+           </div>
         </div>
         <div class="experience">
             <h3><u>Experience</u></h3>
