--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             </table>
         </div>
         <div class="skills">
-            <h2>Skills</h2>
+            <div class="top">
+                <img src="assets/icon/skills.jpeg" alt="">
+                <h2>Skills</h2>
+            </div>
            <div class="skill">
             <table>
                 <tr>
@@ -107,26 +110,47 @@
             </table>
             <table>
                 <tr>
-                    <td><img src="https://img.icons8.com/color/48/c-programming.png" alt=""></td>
+                    <td><img src="assets/icon/c.png" alt=""></td>
                     <td>C</td>
                 </tr>
                 <tr>
-                    <td><img src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="" ></td>
+                    <td><img src="assets/icon/java.png" alt="" ></td>
                     <td>Java</td>
                 </tr>
                 <tr>
-                    <td><img src="https://img.icons8.com/color/48/python--v1.png" alt=""></td>
+                    <td><img src="assets/icon/python.png" alt=""></td>
                     <td>Python</td>
                 </tr>
                 <tr>
-                    <td><img src="https://img.icons8.com/color/48/mysql-logo.png" alt=""></td>
+                    <td><img src="assets/icon/sql.png" alt=""></td>
                     <td>My SQL</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td><img src="assets/icon/c.png" alt=""></td>
+                    <td>Mongo DB</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/java.png" alt="" ></td>
+                    <td>Photoshop</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/python.png" alt=""></td>
+                    <td>Git</td>
+                </tr>
+                <tr>
+                    <td><img src="assets/icon/sql.png" alt=""></td>
+                    <td>MS Office</td>
                 </tr>
             </table>
            </div>
         </div>
         <div class="experience">
-            <h3><u>Experience</u></h3>
+            <div class="top">
+                <img src="assets/icon/experience.png" alt="">
+                <h2>Experience</h2>
+            </div>
             <table border="1" style="border-collapse: collapse;">
                 <tr>
                     <th>Company</th>
@@ -147,9 +171,8 @@
         </div>
         <div class="declaration">
             <h3><u>Declaration</u></h3>
-            <p>I herreby declare that the details and information given above are compelete and</p>
-            <p> true to the best of my knowledge</p>
-            <img src="Sing.jpg" height="50px" width="160px" alt="">
+            <p>I herreby declare that the details and information given above are compelete and true to the best of my knowledge</p>
+            <img src="assets/Sing.jpg" height="50px" width="160px" alt="">
         </div>
     </div>
 </body>
