--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Resume</h1>
         </div>
         <div class="photo">
-            <img src="assets/Photo.jpg" alt="">
+            <img src="assets/photo.png" alt="">
         </div>
         <div class="personal_details">
             <div class="top">
@@ -170,7 +170,9 @@
             </table>
         </div>
         <div class="declaration">
-            <h3><u>Declaration</u></h3>
+            <div class="top">
+                <h2>Declaration</h2>
+            </div>
             <p>I herreby declare that the details and information given above are compelete and true to the best of my knowledge</p>
             <img src="assets/Sing.jpg" height="50px" width="160px" alt="">
         </div>
