--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="css/sytle.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
+
 <body>
     <div class="main">
         <div class="head">
@@ -89,62 +90,62 @@
                 <img src="assets/icon/skills.jpeg" alt="">
                 <h2>Skills</h2>
             </div>
-           <div class="skill">
-            <table>
-                <tr>
-                    <td><img src="assets/icon/html.png""></td>
+            <div class="skill">
+                <table>
+                    <tr>
+                        <th><img src="assets/icon/html.png""></th>
                     <td>HTML</td>
                 </tr>
                 <tr>
-                    <td><img src="assets/icon/css.png" alt=""></td>
-                    <td>CSS</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/js.png" alt=""></td>
-                    <td>Java Script</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/php.png" alt=""></td>
-                    <td>PHP</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td><img src="assets/icon/c.png" alt=""></td>
-                    <td>C</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/java.png" alt="" ></td>
-                    <td>Java</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/python.png" alt=""></td>
-                    <td>Python</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/sql.png" alt=""></td>
-                    <td>My SQL</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td><img src="assets/icon/c.png" alt=""></td>
-                    <td>Mongo DB</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/java.png" alt="" ></td>
-                    <td>Photoshop</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/python.png" alt=""></td>
-                    <td>Git</td>
-                </tr>
-                <tr>
-                    <td><img src="assets/icon/sql.png" alt=""></td>
-                    <td>MS Office</td>
-                </tr>
-            </table>
-           </div>
+                    <th><img src=" assets/icon/css.png" alt=""></th>
+                        <td>CSS</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/js.png" alt=""></th>
+                        <td>Java Script</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/php.png" alt=""></th>
+                        <td>PHP</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th><img src="assets/icon/c.png" alt=""></th>
+                        <td>C</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/java.png" alt=""></th>
+                        <td>Java</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/python.png" alt=""></th>
+                        <td>Python</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/sql.png" alt=""></th>
+                        <td>My SQL</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <th><img src="assets/icon/mongo.jpg" alt=""></th>
+                        <td>Mongo DB</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/photoshop.png" alt=""></th>
+                        <td>Photoshop</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/git.jpg" alt=""></th>
+                        <td>Git</td>
+                    </tr>
+                    <tr>
+                        <th><img src="assets/icon/office.png" alt=""></th>
+                        <td>MS Office</td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="experience">
             <div class="top">
@@ -163,22 +164,27 @@
                     <td>6 month</td>
                 </tr>
                 <tr>
-                    <td>Google</td>
+                    <td>Microsoft</td>
                     <td>Junior Java Developer</td>
+                    <td>1 year</td>
+                </tr>
+                <tr>
+                    <td>Google</td>
+                    <td>Java Developer</td>
                     <td>1 year</td>
                 </tr>
             </table>
         </div>
         <div class="declaration">
             <div class="top">
+                <img src="assets/icon/declare.png" alt="">
                 <h2>Declaration</h2>
             </div>
-            <p>I herreby declare that the details and information given above are compelete and true to the best of my knowledge</p>
-            <img src="assets/Sing.jpg" height="50px" width="160px" alt="">
+            <p>I herreby declare that the details and information given above are compelete and true to the best of my
+                knowledge</p>
+            <img class="sing" src="assets/Sing.jpg" height="50px" width="160px" alt="">
         </div>
     </div>
 </body>
 
 </html>
-
-
