--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Hari</title>
     <link rel="stylesheet" href="css/sytle.css">
+    <link rel="stylesheet" href="css/new.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/photo.ico" />
 </head>
 
 <body>
     <div class="main">
-        <div class="head">
+        <!-- <div class="head">
             <h1>Resume</h1>
-        </div>
+        </div> -->
         <div class="photo">
             <img src="assets/photo.png" alt="">
         </div>
@@ -175,7 +176,7 @@
                 </tr>
             </table>
         </div>
-        <div class="declaration">
+        <!-- <div class="declaration">
             <div class="top">
                 <img src="assets/icon/declare.png" alt="">
                 <h2>Declaration</h2>
@@ -183,6 +184,12 @@
             <p>I herreby declare that the details and information given above are compelete and true to the best of my
                 knowledge</p>
             <img class="sing" src="assets/Sing.jpg" height="50px" width="160px" alt="">
+        </div> -->
+        <div class="project">
+            <h2>Projects</h2>
+            <div class="button">
+                <a href="https://harimalam.github.io/Web-Development/">view</a>
+            </div>
         </div>
     </div>
 </body>
