--- a/index.html
+++ b/index.html
@@ -191,6 +191,18 @@
                 <a href="https://harimalam.github.io/Web-Development/">view</a>
             </div>
         </div>
+        <div class="project">
+            <h2>ADA - Practicals</h2>
+            <div class="button">
+                <a href="https://github.com/HariMalam/ADA-3150703-.git">view</a>
+            </div>
+        </div>
+        <div class="project">
+            <h2>ADA - Lab Manual</h2>
+            <div class="button">
+                <a href="https://drive.google.com/drive/folders/1xASUA7RVteCm7cT3ng8TAMmIHmLFEYEt?usp=sharing">view</a>
+            </div>
+        </div>
     </div>
 </body>
 
